--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
     </style>
 </head>
 <body>
-<div id="map"></div>
+<div id="map" style="z-index: -999;"></div>
 <div class="layer-toggle" id="layer-toggle"></div>
 <div id="cross-section" style="width: 100%; max-width: 900px; margin: 20px auto 0 auto; height: 80px;"></div>
 
@@ -38,7 +38,12 @@
 <script>
 const map = new maplibregl.Map({
     container: 'map',
-    style: 'https://raw.githubusercontent.com/go2garret/maps/main/src/assets/json/openStreetMap.json', // Free OSM base map
+    //style: 'https://raw.githubusercontent.com/go2garret/maps/main/src/assets/json/openStreetMap.json', // Free OSM base map
+	style: {
+		version: 8,
+		sources: {},
+		layers: []
+	},
     center: [24.161728, 45.790919], // Change to your city!
     zoom: 14
 });
@@ -81,123 +86,285 @@ function showCrossSection(properties) {
 }
 
 map.on('load', () => {
-    fetch('streets.geojson')
-        .then(resp => resp.json())
-        .then(data => {
-			console.log('Loaded GeoJSON:', data); // <-- Add this line!			
-			map.addSource('streets', { type: 'geojson', data: data });
-			
-			const SCALE = 2;
-			const sectionFields = [
-			  { id: "zona_verd1",  name: "Green 1",    color: "#34A853" },
-			  { id: "parcare1",    name: "Parking 1",  color: "#FFD600" },
-			  { id: "trotuar1",    name: "Sidewalk 1", color: "#4285F4" },
-			  { id: "pista1",      name: "Bike 1",     color: "#00E676" },
-			  { id: "carosabil",   name: "Road",       color: "#B0B0B0" },
-			  { id: "pista2",      name: "Bike 2",     color: "#00E676" },
-			  { id: "trotuar2",    name: "Sidewalk 2", color: "#4285F4" },
-			  { id: "parcare2",    name: "Parking 2",  color: "#FFD600" },
-			  { id: "zona_verd2",  name: "Green 2",    color: "#34A853" }
-			];
-
-			const centerIndex = sectionFields.findIndex(f => f.id === "carosabil");
-			const px = (field, scale) => ['*', ['coalesce', ['get', field], 0], scale];
-			
-			function getOffsetExpr(i) {
-				// Center = 0
-				if (i === centerIndex) return 0;
-				// Left side
-				if (i < centerIndex) {
-					const fieldsBetween = sectionFields.slice(i + 1, centerIndex);
-					return [
-						'-', 0,
-						[
-							'+',
-							// 0.5 * carosabil width
-							['*', ['coalesce', ['get', 'carosabil'], 0], 0.5 * SCALE],
-							// sum of full widths of in-between fields
-							...fieldsBetween.map(f => px(f.id, SCALE)),
-							// 0.5 * own width
-							['*', ['coalesce', ['get', sectionFields[i].id], 0], 0.5 * SCALE]
-						]
-					];
-				}
-				// Right side
-				else {
-					const fieldsBetween = sectionFields.slice(centerIndex + 1, i);
-					return [
-						'+',
-						['*', ['coalesce', ['get', 'carosabil'], 0], 0.5 * SCALE],
-						...fieldsBetween.map(f => px(f.id, SCALE)),
-						['*', ['coalesce', ['get', sectionFields[i].id], 0], 0.5 * SCALE]
-					];
-				}
-			}
-		
-			map.on('mousemove', 'carosabil', e => {
-				if (e.features && e.features.length) {
-					showCrossSection(e.features[0].properties);
-				}
-			});
-			map.on('mouseleave', 'carosabil', e => {
-				document.getElementById("cross-section").innerHTML = "";
-			});
-
-			sectionFields.forEach((section, i) => {
-				const offsetExpr = getOffsetExpr(i);
-
-				map.addLayer({
-					id: section.id,
-					type: 'line',
-					source: 'streets',
-					layout: {
-						'line-cap': 'butt',
-						'line-join': 'round'
-					},
-					paint: {
-						'line-color': section.color,
-						'line-width': px(section.id, SCALE),
-						...(section.id !== "carosabil" ? { 'line-offset': offsetExpr } : {}),
-						'line-opacity': 0.95
-					},
-					filter: ['>', ['coalesce', ['get', section.id], 0], 0]
-				});
-
-				// Layer toggle UI
-				const cb = document.createElement('input');
-				cb.type = 'checkbox';
-				cb.id = section.id + '_cb';
-				cb.checked = true;
-				cb.onchange = () => {
-					map.setLayoutProperty(section.id, 'visibility', cb.checked ? 'visible' : 'none');
-				};
-				const label = document.createElement('label');
-				label.htmlFor = cb.id;
-				label.innerText = section.name;
-				const div = document.getElementById('layer-toggle');
-				div.appendChild(cb);
-				div.appendChild(label);
-
-				// Popups and pointer cursor
-				if (section.id === "carosabil") {
-					map.on('click', section.id, (e) => {
-						const props = e.features[0].properties;
-						let content = `<strong>${section.name}</strong><br>`;
-						Object.keys(props).forEach(k => {
-							content += `<b>${k}:</b> ${props[k]}<br>`;
-						});
-						new maplibregl.Popup()
-							.setLngLat(e.lngLat)
-							.setHTML(content)
-							.addTo(map);
-					});
-					map.on('mouseenter', section.id, () => map.getCanvas().style.cursor = 'pointer');
-					map.on('mouseleave', section.id, () => map.getCanvas().style.cursor = '');
-				}
-			});
-			
-			map.moveLayer('carosabil');
+	map.loadImage('assets/school-20.png', (error, image) => {
+		if (error) throw error;
+		console.log('Image loaded:', image);
+		map.addImage('school-icon', image);
+		map.addLayer({
+		  id: 'schools_symbol',
+		  type: 'symbol',
+		  source: 'schools',
+		  layout: {
+			'icon-image': 'school-icon',
+			'icon-size': [
+			  'case',
+			  ['==', ['get', 'denumire'], 'Scoala 4'], 1.6,
+			  1.2
+			],
+			'icon-allow-overlap': true,
+			'text-field': ['get', 'denumire'],
+			'text-font': ['Open Sans Semibold', 'Arial Unicode MS Bold'],
+			'text-size': [
+			  'case',
+			  ['==', ['get', 'denumire'], 'Scoala 4'], 16,
+			  13
+			],
+			'text-offset': [0, 2],
+			'text-anchor': 'top'
+		  },
+		  paint: {
+			'icon-color': [
+			  'case',
+			  ['==', ['get', 'denumire'], 'Scoala 4'], '#D32F2F',
+			  '#1565C0'
+			],
+			'text-color': '#333',
+			'text-halo-color': '#fff',
+			'text-halo-width': 2
+		  }
 		});
+	});
+				
+	map.addSource('streets', { type: 'geojson', data: 'streets.geojson' });
+	map.addSource('schools', { type: 'geojson', data: 'schools.geojson' });
+	map.addSource('school_4_walking_isochrone', { type: 'geojson', data: 'school_4_walking_isochrone.geojson' });
+	map.addSource('trei_stejari_limit', { type: 'geojson', data: 'trei_stejari_limit.geojson' });
+	
+	const SCALE = 2;
+	const sectionFields = [
+	  { id: "zona_verd1",  name: "Green 1",    color: "#34A853", scale: 3 },
+	  { id: "parcare1",    name: "Parking 1",  color: "#FFD600", scale: 3 },
+	  { id: "trotuar1",    name: "Sidewalk 1", color: "#4285F4", scale: 3 },
+	  { id: "pista1",      name: "Bike 1",     color: "#00E676", scale: 4 },
+	  { id: "carosabil",   name: "Road",       color: "#B0B0B0", scale: 2 },
+	  { id: "pista2",      name: "Bike 2",     color: "#00E676", scale: 4 },
+	  { id: "trotuar2",    name: "Sidewalk 2", color: "#4285F4", scale: 3 },
+	  { id: "parcare2",    name: "Parking 2",  color: "#FFD600", scale: 3 },
+	  { id: "zona_verd2",  name: "Green 2",    color: "#34A853", scale: 3 }
+	];
+
+	const centerIndex = sectionFields.findIndex(f => f.id === "carosabil");
+	const px = (field, scale) => ['*', ['coalesce', ['get', field], 0], scale];
+
+	function getOffsetExpr(i) {
+		const centerIndex = sectionFields.findIndex(f => f.id === "carosabil");
+		// Center = 0
+		if (i === centerIndex) return 0;
+		// Left side
+		if (i < centerIndex) {
+			const fieldsBetween = sectionFields.slice(i + 1, centerIndex);
+			return [
+				'-', 0,
+				[
+					'+',
+					// 0.5 * carosabil width * its scale
+					['*', ['coalesce', ['get', 'carosabil'], 0], sectionFields[centerIndex].scale * 0.5],
+					// sum of full widths of in-between fields, using each's scale
+					...fieldsBetween.map(f => px(f.id, f.scale)),
+					// 0.5 * own width * own scale
+					['*', ['coalesce', ['get', sectionFields[i].id], 0], sectionFields[i].scale * 0.5]
+				]
+			];
+		}
+		// Right side
+		else {
+			const fieldsBetween = sectionFields.slice(centerIndex + 1, i);
+			return [
+				'+',
+				['*', ['coalesce', ['get', 'carosabil'], 0], sectionFields[centerIndex].scale * 0.5],
+				...fieldsBetween.map(f => px(f.id, f.scale)),
+				['*', ['coalesce', ['get', sectionFields[i].id], 0], sectionFields[i].scale * 0.5]
+			];
+		}
+	}
+	
+	map.addLayer({
+		id: 'school_4_isochrone_fill',
+		type: 'fill',
+		source: 'school_4_walking_isochrone',
+		paint: {
+			'fill-color': [
+				'match', ['get', 'band'],  // <-- Change to your field for timeband if needed
+				'0-5',   '#c8e6c9',       // very light green
+				'5-10',  '#81c784',       // medium green
+				'10-15', '#388e3c',       // dark green
+				'15+',   '#e77148',       // orange
+				'#c8e6c9'                 // default if no match
+			],
+			'fill-opacity': 0.45,
+			'fill-outline-color': '#0f0f0f'
+		}
+	});
+	// Optionally, add line outlines for clearer edges
+	map.addLayer({
+		id: 'school_4_isochrone_outline',
+		type: 'line',
+		source: 'school_4_walking_isochrone',
+		paint: {
+			'line-color': '#0f0f0f',
+			'line-width': 1
+		}
+	});
+	
+	map.addLayer({
+		id: 'background_streets',
+		type: 'line',
+		source: 'streets',
+		paint: {
+			'line-color': '#bbb',
+			'line-width': 10,
+			'line-opacity': 1
+		},
+		layout: {
+			'line-cap': 'butt',
+			'line-join': 'round'
+		}
+	});
+	
+	{
+		const cb = document.createElement('input');
+		cb.type = 'checkbox';
+		cb.id = 'streets_cb';
+		cb.checked = true;
+		cb.onchange = () => {
+			map.setLayoutProperty('background_streets', 'visibility', cb.checked ? 'visible' : 'none');
+		};
+		const label = document.createElement('label');
+		label.htmlFor = cb.id;
+		label.innerText = "Other Streets";
+		const div = document.getElementById('layer-toggle');
+		div.appendChild(cb);
+		div.appendChild(label);
+	}
+	
+	map.addLayer({
+		id: 'scoala_4_highlight',
+		type: 'line',
+		source: 'streets',
+		paint: {
+			'line-color': '#1565C0', // bright blue, or your choice
+			'line-width': 6,
+			'line-opacity': 0.65
+		},
+		filter: ['==', ['get', 'arondat'], 'scoala_4'],
+		layout: {
+			'line-cap': 'butt',
+			'line-join': 'round'
+		}
+	}); // Insert below the cross-section stack
+	
+	{
+		const cb = document.createElement('input');
+		cb.type = 'checkbox';
+		cb.type = 'checkbox';
+		cb.id = 'scoala_4_streets_cb';
+		cb.checked = true;
+		cb.onchange = () => {
+			map.setLayoutProperty('scoala_4_highlight', 'visibility', cb.checked ? 'visible' : 'none');
+		};
+		const label = document.createElement('label');
+		label.htmlFor = cb.id;
+		label.innerText = "School 4 streets";
+		const div = document.getElementById('layer-toggle');
+		div.appendChild(cb);
+		div.appendChild(label);
+	}
+	
+	map.on('click', 'background_streets', (e) => {
+		const props = e.features[0].properties;
+		let content = `<strong>${props['name']}</strong><br>`;
+		Object.keys(props).forEach(k => {
+			content += `<b>${k}:</b> ${props[k]}<br>`;
+		});
+		new maplibregl.Popup()
+			.setLngLat(e.lngLat)
+			.setHTML(content)
+			.addTo(map);
+	});
+	map.on('mouseenter', 'background_streets', () => map.getCanvas().style.cursor = 'pointer');
+	map.on('mouseleave', 'background_streets', () => map.getCanvas().style.cursor = '');
+
+	sectionFields.forEach((section, i) => {
+		const offsetExpr = getOffsetExpr(i);
+
+		map.addLayer({
+			id: section.id,
+			type: 'line',
+			source: 'streets',
+			layout: {
+				'line-cap': 'butt',
+				'line-join': 'round'
+			},
+			paint: {
+				'line-color': section.color,
+				'line-width': px(section.id, section.scale),
+				...(section.id !== "carosabil" ? { 'line-offset': offsetExpr } : {}),
+				'line-opacity': 0.95
+			},
+			filter: ['>', ['coalesce', ['get', section.id], 0], 0]
+		});
+
+		// Layer toggle UI
+		const cb = document.createElement('input');
+		cb.type = 'checkbox';
+		cb.id = section.id + '_cb';
+		cb.checked = true;
+		cb.onchange = () => {
+			map.setLayoutProperty(section.id, 'visibility', cb.checked ? 'visible' : 'none');
+		};
+		const label = document.createElement('label');
+		label.htmlFor = cb.id;
+		label.innerText = section.name;
+		const div = document.getElementById('layer-toggle');
+		div.appendChild(cb);
+		div.appendChild(label);
+
+		// Popups and pointer cursor
+		map.on('click', section.id, (e) => {
+			const props = e.features[0].properties;
+			let content = `<strong>${props['name']}</strong><br>`;
+			Object.keys(props).forEach(k => {
+				content += `<b>${k}:</b> ${props[k]}<br>`;
+			});
+			new maplibregl.Popup()
+				.setLngLat(e.lngLat)
+				.setHTML(content)
+				.addTo(map);
+		});
+		map.on('mouseenter', section.id, () => map.getCanvas().style.cursor = 'pointer');
+		map.on('mouseleave', section.id, () => map.getCanvas().style.cursor = '');
+		
+		map.on('mousemove', section.id, e => {
+			if (e.features && e.features.length)
+				showCrossSection(e.features[0].properties);
+		});
+		map.on('mouseleave', section.id, e => {
+			document.getElementById("cross-section").innerHTML = "";
+		});
+	});
+	
+	// Fill (transparent yellow)
+	map.addLayer({
+		id: 'trei_stejari_limit_fill',
+		type: 'fill',
+		source: 'trei_stejari_limit',
+		paint: {
+			'fill-color': 'rgba(255,255,153,0.15)',
+			'fill-outline-color': '#53b653'
+		}
+	});
+	// Outline (green, 2px)
+	map.addLayer({
+		id: 'trei_stejari_limit_outline',
+		type: 'line',
+		source: 'trei_stejari_limit',
+		paint: {
+			'line-color': '#53b653',
+			'line-width': 2
+		}
+	});
+
+	map.moveLayer('carosabil');
 });
 
 </script>
