--- a/index.html
+++ b/index.html
@@ -273,7 +273,7 @@
                 <summary>Întrebări Frecvente (FAQ)</summary>
                 <div class="faq-content">
                     <h4>Ce reprezintă stratul "Parcări ilegale pe trotuar"?</h4>
-                    <p>Acest strat evidențiază segmentele de stradă unde parcarea pe trotuar, deși practicată, nu lasă spațiul minim legal pentru pietoni. Conform legislației, trebuie asigurat un coridor liber de cel puțin 1 metru.</p>
+                    <p>Acest strat evidențiază segmentele de stradă unde parcarea pe trotuar, deși practicată, nu lasă spațiul minim legal pentru pietoni, sau spațiu minim pentru piste de biciclete propuse. Conform legislației, trebuie asigurat un coridor liber de cel puțin 1 metru pentru pietoni.</p>
 
                     <h4>Ce înseamnă "Parcări amenajate pe trotuar"?</h4>
                     <p>Acest strat indică zonele unde parcarea pe trotuar este amenajată și marcată, de obicei ca parcări rezidențiale.</p>
